feat: validation endpoint (#22)
